优化基础框架代码.

--- a/user/src/main/res/layout/activity_register.xml
+++ b/user/src/main/res/layout/activity_register.xml
@@ -9,6 +9,7 @@
             android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/mMobileEt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -22,11 +23,13 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/mVerifyEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="请输入验证码"/>
 
     <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/mPwdEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="请输入密码"/>
