--- a/user/src/main/res/layout/activity_register.xml
+++ b/user/src/main/res/layout/activity_register.xml
@@ -1,50 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-                                              android:layout_width="match_parent"
-                                              android:layout_height="match_parent"
-                                              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <com.sukaidev.common.widget.HeaderBar
+        style="@style/MatchWrap"
+        app:titleText="注册"
+        app:rightText="登录"
+        app:isShowBack="false"/>
+
 
     <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/mMobileEt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="请输入手机号码"/>
+            android:id="@+id/mMobileEt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="请输入手机号码" />
 
         <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="获取验证码"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="获取验证码" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/mVerifyEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请输入验证码"/>
+        android:id="@+id/mVerifyEt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入验证码" />
 
     <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/mPwdEt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请输入密码"/>
+        android:id="@+id/mPwdEt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入密码" />
 
     <androidx.appcompat.widget.AppCompatEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="请确认密码"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请确认密码" />
 
     <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="注册"/>
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="注册" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
