--- a/common/src/main/res/layout/progress_dialog.xml
+++ b/common/src/main/res/layout/progress_dialog.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@style/WrapWrap.Vertical"
-              android:background="@drawable/progress_dialog_bg"
-              android:gravity="center_horizontal"
-              android:padding="40dp">
-    <ImageView
-            android:id="@+id/iv_loading"
-            style="@style/WrapWrap"
-            android:layout_gravity="center"
-            android:background="@drawable/progress_dialog_anim"/>
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/WrapWrap.Vertical"
+    android:background="@drawable/progress_dialog_bg"
+    android:gravity="center_horizontal"
+    android:padding="40dp">
 
-</LinearLayout>
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_loading"
+        style="@style/WrapWrap"
+        android:layout_gravity="center"
+        android:background="@drawable/progress_dialog_anim" />
+
+</androidx.appcompat.widget.LinearLayoutCompat>
