--- a/user/src/main/res/layout/activity_register.xml
+++ b/user/src/main/res/layout/activity_register.xml
@@ -7,9 +7,9 @@
 
     <com.sukaidev.common.widget.HeaderBar
         style="@style/MatchWrap"
-        app:titleText="注册"
+        app:isShowBack="false"
         app:rightText="登录"
-        app:isShowBack="false"/>
+        app:titleText="注册" />
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -23,7 +23,8 @@
             android:layout_weight="1"
             android:hint="请输入手机号码" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.sukaidev.common.widget.VerifyButton
+            android:id="@+id/mGetVerifyCodeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="获取验证码" />
