--- a/common/src/main/res/layout/layout_header_bar.xml
+++ b/common/src/main/res/layout/layout_header_bar.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:background="@color/common_blue"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/common_header_bar_height">
-    <androidx.appcompat.widget.AppCompatImageView android:id="@+id/mLeftIv"
-                                                  android:paddingLeft="@dimen/common_padding"
-                                                  android:paddingRight="@dimen/common_padding"
-                                                  style="@style/WrapMatch"
-                                                  android:src="@drawable/icon_back"/>
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/common_header_bar_height"
+    android:background="@color/common_blue">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/mLeftIv"
+        style="@style/WrapMatch"
+        android:paddingLeft="@dimen/common_padding"
+        android:paddingRight="@dimen/common_padding"
+        android:src="@drawable/icon_back" />
+
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/mTitleTv"
-            android:textSize="@dimen/text_large_size"
-            android:textColor="@color/common_white"
-            style="@style/WrapWrap"
-            android:layout_centerInParent="true"/>
+        android:id="@+id/mTitleTv"
+        style="@style/WrapWrap"
+        android:layout_centerInParent="true"
+        android:textColor="@color/common_white"
+        android:textSize="@dimen/text_large_size" />
+
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/mRightTv"
-            style="@style/WrapMatch"
-            android:textColor="@color/common_white"
-            android:gravity="center"
-            android:paddingLeft="@dimen/common_padding"
-            android:paddingRight="@dimen/common_padding"
-            android:visibility="gone"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+        android:id="@+id/mRightTv"
+        style="@style/WrapMatch"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:paddingLeft="@dimen/common_padding"
+        android:paddingRight="@dimen/common_padding"
+        android:textColor="@color/common_white"
+        android:visibility="gone" />
 </RelativeLayout>
