商品分类页面二级列表开发.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 
-    <com.sukaidev.message.widgets.NewsFlipperView
+    <com.sukaidev.message.widget.NewsFlipperView
         android:id="@+id/mNewsFlipperView"
         style="@style/MatchWrap"
         android:layout_marginLeft="@dimen/common_margin_middle"
