--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:windowBackground">@color/common_black</item>
     </style>
 
-<!--    &lt;!&ndash; 多状态视图样式&ndash;&gt;
+    <!--多状态视图样式-->
     <style name="MultiStateStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -23,7 +23,7 @@
         <item name="msv_emptyView">@layout/layout_state_empty</item>
         <item name="msv_errorView">@layout/layout_state_error</item>
         <item name="msv_viewState">loading</item>
-    </style>-->
+    </style>
 
     <!-- 加载弹框样式 -->
     <style name="LightDialog" parent="@android:style/Theme.Dialog">
@@ -82,23 +82,23 @@
     <style name="TabLayoutTextStyle">
         <item name="android:textSize">@dimen/text_big_size</item>
     </style>
-<!--    &lt;!&ndash; TabLayout通用样式&ndash;&gt;
-    <style name="TabsStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="tabIndicatorColor">@color/common_white</item>
-        <item name="tabBackground">@drawable/tab_selector</item>
-        <item name="tabTextAppearance">@style/TabLayoutTextStyle</item>
-        <item name="tabTextColor">@color/text_light_dark</item>
-        <item name="tabSelectedTextColor">@color/common_white</item>
-    </style>
-    &lt;!&ndash; 订单中Tab样式&ndash;&gt;
-    <style name="TabsStyle.Order" parent="@style/TabsStyle">
-        <item name="tabIndicatorColor">@color/common_blue</item>
-        <item name="tabBackground">@drawable/border_bottom</item>
-        <item name="tabTextColor">@color/text_normal</item>
-        <item name="tabSelectedTextColor">@color/common_blue</item>
-    </style>-->
+<!--&lt;!&ndash;    &lt;!&ndash; TabLayout通用样式&ndash;&gt;-->
+    <!--<style name="TabsStyle">-->
+        <!--<item name="android:layout_width">match_parent</item>-->
+        <!--<item name="android:layout_height">wrap_content</item>-->
+        <!--<item name="tabIndicatorColor">@color/common_white</item>-->
+        <!--<item name="tabBackground">@drawable/tab_selector</item>-->
+        <!--<item name="tabTextAppearance">@style/TabLayoutTextStyle</item>-->
+        <!--<item name="tabTextColor">@color/text_light_dark</item>-->
+        <!--<item name="tabSelectedTextColor">@color/common_white</item>-->
+    <!--</style>-->
+    <!--&lt;!&ndash; 订单中Tab样式&ndash;&gt;-->
+    <!--<style name="TabsStyle.Order" parent="@style/TabsStyle">-->
+        <!--<item name="tabIndicatorColor">@color/common_blue</item>-->
+        <!--<item name="tabBackground">@drawable/border_bottom</item>-->
+        <!--<item name="tabTextColor">@color/text_normal</item>-->
+        <!--<item name="tabSelectedTextColor">@color/common_blue</item>-->
+    <!--</style>&ndash;&gt;-->
     <!-- 横向分隔线 -->
     <style name="DividerFixedHeight">
         <item name="android:background">@color/common_divider</item>
