实现商品搜索功能.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,8 @@
         android:paddingLeft="@dimen/common_padding"
         tools:ignore="RtlSymmetry">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/mSearchEt"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mSearchTv"
             style="@style/SearchHeaderEtStyle"
             android:cursorVisible="false"
             android:hint="搜索商品/品类"
