--- a/order/src/main/res/layout/layout_order_goods_item.xml
+++ b/order/src/main/res/layout/layout_order_goods_item.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                style="@style/WrapWrap.Vertical"
-                android:background="@drawable/border_all"
-                android:padding="@dimen/common_padding">
-    <ImageView
-            android:id="@+id/mGoodsIconIv"
-            android:layout_width="@dimen/common_icon_width"
-            android:layout_height="@dimen/common_icon_height"
-            android:scaleType="fitXY"
-            android:layout_centerVertical="true"/>
-    <TextView
-            android:id="@+id/mGoodsDescTv"
-            style="@style/WrapWrap"
-            android:textColor="@color/text_light_dark"
-            android:ellipsize="end"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="@dimen/common_margin"
-            android:maxLines="1"
-            android:layout_toRightOf="@id/mGoodsIconIv"/>
-    <TextView
-            android:id="@+id/mGoodsSkuTv"
-            style="@style/WrapWrap"
-            android:textSize="@dimen/text_small_size"
-            android:layout_marginTop="@dimen/common_margin_small"
-            android:layout_below="@id/mGoodsDescTv"
-            android:layout_alignLeft="@id/mGoodsDescTv"/>
-    <TextView
-            android:id="@+id/mGoodsPriceTv"
-            style="@style/MatchWrap"
-            android:textColor="@color/common_red"
-            android:layout_marginTop="@dimen/common_margin_small"
-            android:layout_below="@id/mGoodsSkuTv"
-            android:layout_alignLeft="@id/mGoodsSkuTv"/>
-    <TextView
-            android:id="@+id/mGoodsCountTv"
-            style="@style/WrapWrap"
-            android:textSize="@dimen/text_small_size"
-            android:textColor="@color/text_dark"
-            android:layout_alignTop="@id/mGoodsPriceTv"
-            android:layout_alignParentRight="true"/>
+    style="@style/WrapWrap.Vertical"
+    android:background="@drawable/border_all"
+    android:padding="@dimen/common_padding">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/mGoodsIconIv"
+        android:layout_width="@dimen/common_icon_width"
+        android:layout_height="@dimen/common_icon_height"
+        android:layout_centerVertical="true"
+        android:scaleType="fitXY" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mGoodsDescTv"
+        style="@style/WrapWrap"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="@dimen/common_margin"
+        android:layout_marginLeft="@dimen/common_margin"
+        android:layout_toEndOf="@id/mGoodsIconIv"
+        android:layout_toRightOf="@id/mGoodsIconIv"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/text_light_dark" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mGoodsSkuTv"
+        style="@style/WrapWrap"
+        android:layout_below="@id/mGoodsDescTv"
+        android:layout_alignStart="@id/mGoodsDescTv"
+        android:layout_alignLeft="@id/mGoodsDescTv"
+        android:layout_marginTop="@dimen/common_margin_small"
+        android:textSize="@dimen/text_small_size" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mGoodsPriceTv"
+        style="@style/MatchWrap"
+        android:layout_below="@id/mGoodsSkuTv"
+        android:layout_alignStart="@id/mGoodsSkuTv"
+        android:layout_alignLeft="@id/mGoodsSkuTv"
+        android:layout_marginTop="@dimen/common_margin_small"
+        android:textColor="@color/common_red" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mGoodsCountTv"
+        style="@style/WrapWrap"
+        android:layout_alignTop="@id/mGoodsPriceTv"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/text_dark"
+        android:textSize="@dimen/text_small_size" />
 </RelativeLayout>
