--- a/order/src/main/res/layout/layout_order_item.xml
+++ b/order/src/main/res/layout/layout_order_item.xml
@@ -1,105 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@color/common_white"
-              android:layout_marginBottom="@dimen/common_margin"
-              style="@style/WrapWrap.Vertical">
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/WrapWrap.Vertical"
+    android:layout_marginBottom="@dimen/common_margin"
+    android:background="@color/common_white">
+
     <RelativeLayout style="@style/MatchWrap">
-        <TextView
-                style="@style/WrapWrap"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/common_padding"
-                android:paddingTop="@dimen/common_padding_small"
-                android:paddingRight="@dimen/common_padding_small"
-                android:paddingBottom="@dimen/common_padding_small"
-                android:text="自营"
-                android:textColor="@color/text_light_dark"
-                android:drawableLeft="@drawable/icon_shop"
-                android:drawablePadding="@dimen/common_padding_small"/>
-        <TextView
-                android:id="@+id/mOrderStatusNameTv"
-                style="@style/WrapWrap"
-                android:paddingRight="@dimen/common_padding_small"
-                android:textColor="@color/common_yellow"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            style="@style/WrapWrap"
+            android:drawableStart="@drawable/icon_shop"
+            android:drawableLeft="@drawable/icon_shop"
+            android:drawablePadding="@dimen/common_padding_small"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/common_padding"
+            android:paddingLeft="@dimen/common_padding"
+            android:paddingTop="@dimen/common_padding_small"
+            android:paddingEnd="@dimen/common_padding_small"
+            android:paddingRight="@dimen/common_padding_small"
+            android:paddingBottom="@dimen/common_padding_small"
+            android:text="自营"
+            android:textColor="@color/text_light_dark"
+            tools:ignore="HardcodedText" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mOrderStatusNameTv"
+            style="@style/WrapWrap"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingEnd="@dimen/common_padding_small"
+            android:paddingRight="@dimen/common_padding_small"
+            android:textColor="@color/common_yellow"
+            tools:ignore="RtlSymmetry" />
     </RelativeLayout>
-    <LinearLayout
-            android:id="@+id/mMultiGoodsView"
-            style="@style/MatchWrap.Horizontal"
-            android:background="@color/common_bg"
-            android:visibility="gone"/>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/mMultiGoodsView"
+        style="@style/MatchWrap.Horizontal"
+        android:background="@color/common_bg"
+        android:visibility="gone" />
+
     <RelativeLayout
-            android:id="@+id/mSingleGoodsView"
-            style="@style/MatchWrap.Common"
-            android:padding="@dimen/common_padding_small">
-        <ImageView
-                android:id="@+id/mGoodsIconIv"
-                android:layout_width="@dimen/common_icon_width"
-                android:layout_height="@dimen/common_icon_height"
-                android:layout_marginLeft="@dimen/common_margin"
-                android:scaleType="fitXY"
-                android:layout_centerVertical="true"/>
-        <TextView
-                android:id="@+id/mGoodsDescTv"
-                style="@style/WrapWrap"
-                android:textSize="@dimen/text_small_size"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="@dimen/common_margin"
-                android:layout_toRightOf="@id/mGoodsIconIv"/>
-        <TextView
-                android:id="@+id/mGoodsPriceTv"
-                style="@style/MatchWrap"
-                android:textColor="@color/common_red"
-                android:layout_marginTop="@dimen/common_margin_small"
-                android:layout_below="@id/mGoodsDescTv"
-                android:layout_alignLeft="@id/mGoodsDescTv"/>
-        <TextView
-                android:id="@+id/mGoodsCountTv"
-                style="@style/WrapWrap"
-                android:textSize="@dimen/text_small_size"
-                android:textColor="@color/text_dark"
-                android:layout_alignTop="@id/mGoodsPriceTv"
-                android:layout_alignParentRight="true"/>
-    </RelativeLayout>
-    <TextView
-            android:id="@+id/mOrderInfoTv"
+        android:id="@+id/mSingleGoodsView"
+        style="@style/MatchWrap.Common"
+        android:padding="@dimen/common_padding_small">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/mGoodsIconIv"
+            android:layout_width="@dimen/common_icon_width"
+            android:layout_height="@dimen/common_icon_height"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/common_margin"
+            android:layout_marginLeft="@dimen/common_margin"
+            android:scaleType="fitXY" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mGoodsDescTv"
+            style="@style/WrapWrap"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="@dimen/common_margin"
+            android:layout_marginLeft="@dimen/common_margin"
+            android:layout_toEndOf="@id/mGoodsIconIv"
+            android:layout_toRightOf="@id/mGoodsIconIv"
+            android:textSize="@dimen/text_small_size" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mGoodsPriceTv"
             style="@style/MatchWrap"
+            android:layout_below="@id/mGoodsDescTv"
+            android:layout_alignStart="@id/mGoodsDescTv"
+            android:layout_alignLeft="@id/mGoodsDescTv"
+            android:layout_marginTop="@dimen/common_margin_small"
+            android:textColor="@color/common_red" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mGoodsCountTv"
+            style="@style/WrapWrap"
+            android:layout_alignTop="@id/mGoodsPriceTv"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/text_dark"
+            android:textSize="@dimen/text_small_size" />
+    </RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mOrderInfoTv"
+        style="@style/MatchWrap"
+        android:background="@drawable/border_bottom"
+        android:gravity="end"
+        android:padding="@dimen/common_padding_small"
+        android:textSize="@dimen/text_small_size" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/mBottomView"
+        style="@style/MatchWrap.Horizontal"
+        android:background="@color/common_white"
+        android:gravity="right"
+        android:padding="@dimen/common_padding_small">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/mConfirmBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dip"
+            android:layout_marginEnd="@dimen/common_margin"
+            android:layout_marginRight="@dimen/common_margin"
+            android:background="@drawable/corner_blue_white_bg"
+            android:text="确认收货"
+            android:textColor="@color/common_blue"
             android:textSize="@dimen/text_small_size"
-            android:gravity="right"
-            android:background="@drawable/border_bottom"
-            android:padding="@dimen/common_padding_small"/>
-    <LinearLayout
-            android:id="@+id/mBottomView"
-            style="@style/MatchWrap.Horizontal"
-            android:gravity="right"
-            android:background="@color/common_white"
-            android:padding="@dimen/common_padding_small">
-        <Button
-                android:id="@+id/mConfirmBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="30dip"
-                android:text="确认收货"
-                android:textSize="@dimen/text_small_size"
-                android:textColor="@color/common_blue"
-                android:background="@drawable/corner_blue_white_bg"
-                android:layout_marginRight="@dimen/common_margin"
-        />
-        <Button
-                android:id="@+id/mPayBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="30.0dip"
-                android:text="去支付"
-                android:textSize="@dimen/text_small_size"
-                android:textColor="@color/common_blue"
-                android:background="@drawable/corner_blue_white_bg"
-                android:layout_marginRight="@dimen/common_margin"/>
-        <Button
-                android:id="@+id/mCancelBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="30.0dip"
-                android:text="取消订单"
-                android:textSize="@dimen/text_small_size"
-                android:textColor="@color/text_light_dark"
-                android:background="@drawable/corner_gray_white_bg"/>
-    </LinearLayout>
-</LinearLayout>
+            tools:ignore="HardcodedText" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/mPayBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="30.0dip"
+            android:layout_marginEnd="@dimen/common_margin"
+            android:layout_marginRight="@dimen/common_margin"
+            android:background="@drawable/corner_blue_white_bg"
+            android:text="去支付"
+            android:textColor="@color/common_blue"
+            android:textSize="@dimen/text_small_size"
+            tools:ignore="HardcodedText" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/mCancelBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="30.0dip"
+            android:background="@drawable/corner_gray_white_bg"
+            android:text="取消订单"
+            android:textColor="@color/text_light_dark"
+            android:textSize="@dimen/text_small_size"
+            tools:ignore="HardcodedText" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
