添加"关于"页面.

--- a/common/src/main/res/layout/layout_header_bar.xml
+++ b/common/src/main/res/layout/layout_header_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/common_header_bar_height"
-    android:background="@color/common_blue">
+    android:background="@color/app_main">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/mLeftIv"
