--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#3d3d3d</color>
-    <color name="colorPrimary">#03a9f4</color>
-    <color name="colorPrimaryDark">#03a9f4</color>
+    <color name="colorPrimary">#F1F1F1</color>
+    <color name="colorPrimaryDark">#F1F1F1</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="app_main">@android:color/holo_orange_dark</color>
+    <color name="app_main_dark">#E47900</color>
+    <color name="colorTabText">#fff</color>
+    <color name="colorTabTextSecond">#c7ffffff</color>
+    <color name="colorPrimaryTextSecond">#c7212121</color>
     <color name="common_bg">#f5f5f5</color>
     <color name="common_black">#000000</color>
     <color name="common_blue">#03a9f4</color>
