--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -19,4 +19,8 @@
     <dimen name="text_middle_size">14sp</dimen>
     <dimen name="text_big_size">16sp</dimen>
     <dimen name="text_large_size">18sp</dimen>
+
+    <dimen name="iconCardCornerRadius">0dp</dimen>
+    <dimen name="avatarCardCornerRadius">0dp</dimen>
+    <dimen name="picCardMargin">1dp</dimen>
 </resources>
