--- a/core/src/main/res/layout/item_multiple_banner.xml
+++ b/core/src/main/res/layout/item_multiple_banner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.youth.banner.Banner xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mHomeBanner"
+    android:id="@+id/mIndexBanner"
     android:layout_width="match_parent"
     android:layout_height="150dp" />
