--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -23,4 +23,8 @@
     <dimen name="iconCardCornerRadius">0dp</dimen>
     <dimen name="avatarCardCornerRadius">0dp</dimen>
     <dimen name="picCardMargin">1dp</dimen>
+
+    <dimen name="news_height">45dp</dimen>
+    <dimen name="msg_icon_height">45dip</dimen>
+    <dimen name="msg_icon_width">45dip</dimen>
 </resources>
