--- a/index/src/main/res/layout/delegate_index.xml
+++ b/index/src/main/res/layout/delegate_index.xml
@@ -25,42 +25,9 @@
             android:src="@drawable/icon_scan" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <com.youth.banner.Banner
-        android:id="@+id/mHomeBanner"
-        android:layout_width="match_parent"
-        android:layout_height="150dp" />
-
-    <com.sukaidev.home.widget.NewsFlipperView
-        android:id="@+id/mNewsFlipperView"
-        style="@style/MatchWrap"
-        android:layout_marginLeft="@dimen/common_margin_middle"
-        android:layout_marginTop="@dimen/common_margin_small"
-        android:layout_marginRight="@dimen/common_margin_middle"
-        android:layout_marginBottom="@dimen/common_margin_small" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        style="@style/MatchWrap"
-        android:background="@color/common_white"
-        android:drawableStart="@drawable/icon_special"
-        android:drawableLeft="@drawable/icon_special"
-        android:drawablePadding="@dimen/common_padding_small"
-        android:paddingStart="@dimen/common_margin"
-        android:paddingLeft="@dimen/common_margin"
-        android:paddingTop="@dimen/common_padding_small"
-        android:paddingBottom="@dimen/common_margin_small"
-        android:text="火爆进行中"
-        android:textColor="@color/text_light_dark"
-        android:textSize="@dimen/text_small_size"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText,RtlSymmetry" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mHomeDiscountRv"
-        style="@style/commonRecyclerView"
-        android:layout_height="wrap_content"
-        android:background="@color/common_white"
-        android:paddingLeft="@dimen/common_padding"
-        android:paddingRight="@dimen/common_padding"
-        android:paddingBottom="@dimen/common_padding_small" />
+        android:id="@+id/mIndexRv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
