用户相关模块重构_2.

--- a/user/src/main/res/layout/delegate_settings.xml
+++ b/user/src/main/res/layout/delegate_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/MatchMatch.Vertical">
 
-    <com.sukaidev.common.widget.HeaderBar
+    <com.sukaidev.core.widget.HeaderBar
         style="@style/MatchWrap"
         app:titleText="设置" />
 
