--- a/core/src/main/res/layout/item_multiple_text.xml
+++ b/core/src/main/res/layout/item_multiple_text.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/text_single"
+    android:id="@+id/mSingleTv"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="60dp"
     android:background="@android:color/white"
-    android:gravity="center"
+    android:gravity="center_vertical"
     android:orientation="vertical"
+    android:paddingStart="15dp"
+    android:paddingLeft="15dp"
     android:textColor="@android:color/black"
-    android:textSize="18sp"
+    android:textSize="24sp"
     android:textStyle="bold" />
