--- a/goods/src/main/res/layout/delegate_goods_detail.xml
+++ b/goods/src/main/res/layout/delegate_goods_detail.xml
@@ -8,10 +8,12 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/mAppBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/mCollapsingToolbarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
@@ -22,23 +24,25 @@
                     android:layout_height="wrap_content">
 
                     <com.youth.banner.Banner
-                        android:id="@+id/mGoodsDetailBanner"
+                        android:id="@+id/mGoodsBanner"
                         android:layout_width="match_parent"
                         android:layout_height="380dp" />
 
-                    <androidx.appcompat.widget.ContentFrameLayout
-                        android:id=" @+id/mGoodsContainer"
+                    <!-- 商品信息-->
+                    <FrameLayout
+                        android:id="@+id/goods_info_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/mGoodsDetailBanner" />
+                        android:layout_below="@id/mGoodsBanner" />
+
                 </RelativeLayout>
+
 
                 <!--要放在下面-->
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/mGoodsDetailHeaderBar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginTop="16dp"
+                    android:layout_height="wrap_content"
                     app:contentInsetStart="0dp"
                     app:layout_collapseMode="pin">
 
@@ -66,21 +70,42 @@
                 <!--如果将TabLayout写在这里，将透明-->
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/mTabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
-
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.appcompat.widget.ContentFrameLayout
-            android:id=" @+id/mDetailContainer"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mGoodsDetailBanner" />
+            android:layout_marginTop="5dp"
+            android:background="@android:color/white"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/textView"
+                    style="@style/MatchMatch"
+                    android:gravity="center"
+                    android:padding="@dimen/common_padding_middle"
+                    android:text="@string/goods_desc" />
+
+                <View
+                    android:id="@+id/line_horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/textView"
+                    android:background="@color/app_main" />
+
+                <FrameLayout
+                    android:id="@+id/goods_image_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/line_horizontal" />
+            </RelativeLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include layout="@layout/layout_goods_detail_bottom" />
+
 </RelativeLayout>
