--- a/goods/src/main/res/layout/delegate_goods.xml
+++ b/goods/src/main/res/layout/delegate_goods.xml
@@ -4,6 +4,7 @@
     style="@style/MatchMatch.Vertical.Common">
 
     <com.sukaidev.core.widget.HeaderBar
+        android:id="@+id/mHeaderBar"
         style="@style/MatchWrap"
         app:titleText="商品列表" />
 
@@ -23,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:layout="@layout/stub_content_empty"
+        android:layout="@layout/layout_stub_content_empty"
         android:minHeight="50dp"
         android:orientation="horizontal" />
 </androidx.appcompat.widget.LinearLayoutCompat>
