完成订单管理模块重构.

--- a/order/src/main/res/layout/delegate_edit_address.xml
+++ b/order/src/main/res/layout/delegate_edit_address.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/MatchMatch.Common">
 
-    <com.sukaidev.common.widget.HeaderBar
+    <com.sukaidev.core.widget.HeaderBar
         android:id="@id/mHeaderBar"
         style="@style/MatchWrap"
         app:titleText="新建地址" />
