--- a/core/src/main/res/drawable/tab_selector.xml
+++ b/core/src/main/res/drawable/tab_selector.xml
@@ -2,9 +2,9 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
-        <color android:color="@color/common_blue" />
+        <color android:color="@color/app_main" />
     </item>
     <item android:state_selected="false">
-        <color android:color="@color/common_blue" />
+        <color android:color="@color/app_main" />
     </item>
 </selector>
