接入支付宝支付沙箱.

--- a/order/src/main/res/layout/item_order.xml
+++ b/order/src/main/res/layout/item_order.xml
@@ -56,21 +56,31 @@
             android:scaleType="fitXY" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/mGoodsDescTv"
+            android:id="@+id/mGoodsTitle"
             style="@style/WrapWrap"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="@dimen/common_margin"
             android:layout_marginLeft="@dimen/common_margin"
             android:layout_toEndOf="@id/mGoodsIconIv"
             android:layout_toRightOf="@id/mGoodsIconIv"
+            android:textColor="@color/common_black"
+            android:textSize="@dimen/text_small_size" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/mGoodsSkuTv"
+            style="@style/WrapWrap"
+            android:layout_below="@id/mGoodsTitle"
+            android:layout_alignStart="@id/mGoodsTitle"
+            android:layout_alignLeft="@id/mGoodsTitle"
+            android:textColor="@color/common_gray"
             android:textSize="@dimen/text_small_size" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/mGoodsPriceTv"
             style="@style/MatchWrap"
-            android:layout_below="@id/mGoodsDescTv"
-            android:layout_alignStart="@id/mGoodsDescTv"
-            android:layout_alignLeft="@id/mGoodsDescTv"
+            android:layout_below="@id/mGoodsSkuTv"
+            android:layout_alignStart="@id/mGoodsSkuTv"
+            android:layout_alignLeft="@id/mGoodsSkuTv"
             android:layout_marginTop="@dimen/common_margin_small"
             android:textColor="@color/app_main" />
 
