修复一些资源文件的问题.

--- a/index/src/main/res/layout/delegate_search_goods.xml
+++ b/index/src/main/res/layout/delegate_search_goods.xml
@@ -16,6 +16,9 @@
             android:id="@+id/mKeywordEt"
             style="@style/SearchHeaderEtStyle"
             android:hint="搜索商品/品类"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
             tools:ignore="HardcodedText" />
 
         <androidx.appcompat.widget.AppCompatTextView
