--- a/goods/src/main/res/layout/item_goods.xml
+++ b/goods/src/main/res/layout/item_goods.xml
@@ -12,6 +12,14 @@
         android:layout_height="150dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/mGoodsTitleTv"
+        style="@style/MatchWrap"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/common_black"
+        android:layout_margin="5dp"
+        android:textSize="@dimen/text_middle_size" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/mGoodsDescTv"
         style="@style/WrapWrap"
         android:layout_gravity="center_horizontal"
@@ -23,7 +31,7 @@
         android:id="@+id/mGoodsPriceTv"
         style="@style/MatchWrap"
         android:layout_marginTop="@dimen/common_margin_small"
-        android:textColor="@color/common_red" />
+        android:textColor="@color/app_main" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/mGoodsSalesStockTv"
